--- a/style.css
+++ b/style.css
@@ -1,222 +1,281 @@
-body {
-  font-family: "Pretendard", sans-serif;
-  /* background-color: rgb(255, 255, 255); */
-  line-height: 1.5;
-  word-break: keep-all;
-  background-color: rgb(247, 247, 247);
-
-
+@font-face {
+  font-family: "comicsans";
+  src: url("./asset/fonts/ComicSans-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: "comicsans";
+  src: url("./asset/fonts/ComicSans.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
-.font-big {
-  font-size:170%;
-  padding-left: 4%;
-	}	
+* {
+  font-family: "comicsans", sans-serif;
+  box-sizing: border-box;
+  font-weight: normal;
+  line-height: 1.4;
+  color: #ffffff;
+  vertical-align: top;
+}
 
-.font-small {
-    font-size:80%;
-    line-height:1.3;
-	}
+body {
+  background-color: rgb(0, 0, 0);
+  /* line-height: 1.3; */
+  word-break: keep-all;
+  /* background-color: rgb(247, 247, 247); */
+  height: 100%;
+  margin-right: 10vw;
+  scroll-behavior: smooth; /* 부드러운 스크롤 */
+}
 
-.font-title {
-    font-size:5rem;
-    line-height:1.1;
-    color:red
-	}
+h1 {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 50px;
+  word-spacing: 100%;
+  letter-spacing: 50%;
+  line-height: 1.3em;
+}
+
+h2 {
+  color: #ffffff;
+  font-size: 30px;
+}
 
 p {
-  color: rgb(54, 63, 68);
-  font-size: 15px;
-  background-color: rgb(255, 255, 255);
-  padding: 10px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  /* background-color: rgb(255, 255, 255); */
+  /* padding: 10px; */
   stroke-width: 1;
-  border-style:dashed;
   margin-left: 10px;
-  transform: skewY(-4deg);
-  max-width: 60%;
 }
 
-p:hover{
-  transform: skewY(4deg);
+strong {
+  color: darkorange;
 }
 
-.page {
-  color: rgb(54, 63, 68);
-  font-size: 15px;
-  background-color: rgb(255, 255, 255);
-  padding: 10px;
-  stroke-width: 1;
-  border-style:dashed;
-  margin-left: 10px;
-  transform: skewY(-4deg);
-  max-width: 60%;
+.quote {
+  color: cadetblue;
 }
 
-a{
-  color: orangered;
+li {
+  font-size: 20px;
+  list-style: lower-roman;
+  /* margin-bottom: 1.5em; */
 }
-
-a.menu{
-  color: white;
-}
-
-a:hover {
-  color: rgb(0, 0, 0);
-}
-
-.menu{
-  text-align-last: center;
-  background-color: orangered;
-}
-
-.menu:hover{
-  background-color: rgb(255, 255, 255);
-
-}
-
 
 img {
   margin-top: 20px;
 }
 
-.frame {
-  margin: 10px 8px;
-  padding: 300px 20% 10% 10%;
-  line-height: 1.8;
-  border-width: 3px;
-  
+.container {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  /* height: 90vh; */
+  /* margin-top: 10px; */
+  margin-bottom: 5vh;
+  margin-left: 10vh;
+  margin-right: 10vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
 }
 
-f2 {
-  padding: 10px;
-  background-color: aliceblue;
+.scroll-sync-wrapper {
+  display: flex;
+  height: 100vh;
+  scroll-snap-align: start;
 }
 
-
-
-mytexts{
-  position: absolute;
-  left: 20vw;
-  top: 0px;
-  padding-top: 150px;
-  padding-bottom: 50px;
+.left-panel,
+.right-panel {
+  height: 100%;
+  overflow-y: auto;
 }
 
-.archive{
-    display: flex block;
-    flex-flow: row wrap;
+.left-panel {
+  flex: 0.8;
+  /* background: rgba(240, 240, 240, 0.8); */
+  /* border-right: 1px solid #eee; */
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
-titletexts{
-  font-family: 'Pickle-Standard-0';
-  position: fixed;
-  color: orangered;
-  /* left: 1%; */
-  right: 68vw;
-  padding-top: 30px;
-  font-size:3vw;
-  line-height: 1.1;
-  transition:0.5s;
+.left-panel section {
+  padding: 30px 5px;
+  /* font-size: 1.2rem; */
+  scroll-snap-align: start;
+  min-height: 100vh; /* 필요시 100vh로 늘려서 딱 맞게 보이게 할 수 있음 */
 }
 
-titletexts:hover{
-  color: black;
-  transform:skewY(20deg);
-  transition:1s;
+.left-panel img {
+  max-width: 80%;
+  max-height: 80vh;
+  object-fit: contain;
+  display: block;
+  /* margin: 10px; */
 }
 
-.titletexts_wrap{
-  transform: skewY(-10deg);
-  text-align:center;
+.right-panel {
+  flex: 1;
+  /* background: rgba(255, 255, 255, 0.8); */
+  padding: 30px;
+  overflow-y: auto;
 }
 
-
-h1 {
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 44px;
-  padding: 20px 50px 100px 10px;
-
+.right-panel img {
+  max-width: 80%;
+  max-height: 80vh;
+  object-fit: fill;
+  display: block;
+  margin: 10px;
 }
 
-h2 {
-  border-style: dotted;
-  border-width: 1px;
-  border-color: lightseagreen;
+.right-panel video {
+  max-width: 80%;
+  max-height: 80vh;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
 }
 
-table {
-  width: 90%;
-  table-layout: auto;
-  border-style: dotted;
-  border-width: 7px;
-  border-color: rgb(255, 255, 255);
+.left-panel::-webkit-scrollbar,
+.right-panel::-webkit-scrollbar {
+  display: none;
 }
 
-#heading {
-  color: white;
+.left-panel,
+.right-panel {
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* 
+.left-panel section:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: background-color 0.3s;
+} */
+
+.snap-section {
+  scroll-snap-align: start;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  background: #f0f0f0;
+  /* border-bottom: 1px solid #ccc; */
 }
 
-.quote{
-  color:grey;
+.right-panel {
+  overflow-y: scroll;
+  height: 100vh;
+  position: relative;
 }
 
-.noto-serif-kr-regular {
-  font-family: "Noto Serif KR", serif;
-  font-optical-sizing: auto;
-  font-weight: 200;
-  font-style: normal;
+.right-panel .right-content {
+  display: none;
+  padding: 40px;
+  min-height: 150vh;
 }
 
-.grid-container > div {
-  background-color: rgba(255, 255, 255);
-  text-align: left;
-  padding: 10px;
-  font-size: 10px;
-}
-
-.item1 {
-  grid-column: 1 / span 2;
-  grid-row: 1 / span 3;
-}
-
-.item3 {
-  transform: skewY(-8deg);
-}
-
-.header_wrap {
-  width: 20vw;
-  left: 10px;
-  bottom: 10px;
-  display:flex;
-  position: fixed;
-  /* justify-content: space-between; */
-  /* height: 10vh; */
-  text-align: center;
-  z-index: 999;
-}
-
-.header_wrap_2 {
-  right: 20px;
-  text-align: right;
-  bottom: 10px;
-  display:flex;
-  position: fixed;
-  /* justify-content: space-between;
-  /* height: 10vh; */
-  /* text-align: center; */
-  z-index: 998; */
-}
-
-.header_wrap li {
+.dropdown {
+  position: relative;
   display: inline-block;
-  font-size: 1.2rem;
-  line-height: 5vh;
-  padding-bottom: 40vw;
 }
 
-.row {
-  margin-left: 30%;
-  margin-top: 30%;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+a {
+  display: inline; /* the default for span */
+  padding: 2px;
+  /* border: 1px solid rgb(0, 0, 0); */
+  text-decoration: none;
+  transition: ease-in;
+  color: rgb(204, 255, 0);
+  text-shadow: 4px 4px 16px rgb(0, 255, 76);
+}
+/* a:link {
+  padding: 2px;
+  text-decoration: none;
+  transition: ease-in;
+  color: rgb(204, 255, 0);
+  text-shadow: 0px 8px 16px 0px rgba(255, 0, 0, 0.5);
+}
+*/
+
+a:hover {
+  display: inline;
+  padding: 2px;
+  /* border: 1px solid blue; */
+  background-color: rgba(30, 22, 121, 0.5);
+  color: rgb(204, 255, 0);
+  transition: ease-in;
+  border-radius: 3%;
+  cursor: pointer;
+}
+
+span.c {
+  display: block;
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  border: 1px solid blue;
+  background-color: yellow;
+}
+
+.hover-trigger {
+  background-color: transparent;
+  cursor: pointer;
+  border-bottom: 1px dotted #aaa;
+  position: relative;
+}
+
+.hover-trigger:hover {
+  background-color: #ffe;
+}
+
+#floating-videos {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none; /* 전체 컨테이너는 클릭 무시 */
+  z-index: 10;
+}
+
+#floating-videos a {
+  position: absolute;
+  pointer-events: auto; /* 개별 a 요소는 클릭 허용 */
+  width: 100px;
+  height: 100px;
+  padding: 0px;
+  border: 0px;
+  background-color: none;
+}
+
+.float-vid {
+  width: 100px;
+  height: auto;
+  transition: transform 1s ease-in-out;
+  opacity: 0.9;
+  pointer-events: auto;
+  mix-blend-mode: lighten;
 }
